<resources>
    <string name="app_name">叮咚活动</string>
    <string name="copyright">Copyright © 2021 Aqinn</string>
    <string name="confirm">确认</string>
    <string name="account">账号</string>
    <string name="register_center">注册账号</string>
    <string name="register_account_hint"> 3到20位数字、字母和下划线的组合, 不能以数字开头</string>
    <string name="pwd">密码</string>
    <string name="pwd_repeat">重复密码</string>
    <string name="pwd_repeat_hint">请再一次输入密码</string>
    <string name="register_pwd_hint"> 6到20位数字、字母和下划线的组合</string>
    <string name="nickname">昵称</string>
    <string name="nickname_hint">10位以内字符的组合</string>
    <string name="contact">联系方式</string>
    <string name="contact_hint">微信号、电话号码或电子邮箱</string>
    <string name="sex">性别</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="intro">个人简介</string>
    <string name="intro_hint">简单介绍一下自己</string>
    <string name="login_account_hint">请输入用户名</string>
    <string name="login_pwd_hint">请输入密码</string>
    <string name="register_tip">还没有账号？</string>
    <string name="remember_account">记住密码</string>
    <string name="error_fragment_title">亲这边是出问题了噢</string>
    <string name="error_fragment_detail">暂时不知道是啥问题呢</string>
    <string name="tab_create_act">我创建的活动</string>
    <string name="tab_join_act">我参与的活动</string>
    <string name="personal">我</string>
    <string name="err_page">错误页面</string>
    <string name="act_center">活动中心</string>
    <string name="act_name">活动名称</string>
    <string name="act_time">活动开始时间-活动结束时间</string>
    <string name="act_location">活动地点</string>
    <string name="act_intro">活动简介</string>
    <string name="act_intro_hint">活动简介-详细</string>
    <string name="act_ing">进行中</string>
    <string name="act_not_begin">未开始</string>
    <string name="act_end">已结束</string>
    <string name="act_center_tab_1_title">创建的活动</string>
    <string name="act_center_tab_2_title">参加的活动</string>
    <string name="attend_time_hint">签到时间</string>
    <string name="act_name_hint">活动名称</string>
    <string name="attend_type_hint">签到方式</string>
    <string name="attend_count_hint">签到人数</string>
    <string name="attend_ing">进行中</string>
    <string name="attend_not_begin">未开始</string>
    <string name="attend_end">已结束</string>
    <string name="attend_center">签到中心</string>
    <string name="personal_name_hint">用户昵称</string>
    <string name="personal_contact_hint">联系方式</string>
    <string name="personal_intro_hint">个人简介</string>
    <string name="act_detail">活动详情</string>
    <string name="tips_face_collect_ing_1">正在进行人脸采集</string>
    <string name="tips_face_collect_ing_2">就是这样！保持！</string>
    <string name="tips_face_collect_ing_3">快完成了！</string>
    <string name="tips_face_collect_finish">人脸采集已完成</string>
    <string name="tips_face_collect">请保持面部在屏幕中心圆框区域内 3 秒</string>
    <string name="tips_self_attend_ing">正在进行自助签到...</string>
    <string name="tips_self_attend">请将摄像头对准面部</string>
    <string name="act_detail_name_hint">活动名称</string>
    <string name="act_detail_creator_text">活动创建者</string>
    <string name="act_detail_creator_hint">活动创建者账户</string>
    <string name="act_detail_act_start_time_text">活动开始时间</string>
    <string name="act_detail_start_time_hint">活动开始时间</string>
    <string name="act_detail_end_time_text">活动结束时间</string>
    <string name="act_detail_end_time_hint">活动结束时间</string>
    <string name="act_detail_loc_text">活动地点</string>
    <string name="act_detail_loc_hint">活动地点</string>
    <string name="act_detail_intro_text">活动简介</string>
    <string name="act_detail_intro_hint">活动简介</string>
    <string name="empty_create_act">暂时没有创建活动</string>
    <string name="empty_join_act">暂时没有参加活动</string>
    <string name="empty_attend">暂时没有签到信息</string>
    <string name="create_attend_title_text">创建签到</string>
    <string name="create_attend_select_time_hint">点击选择时间</string>
    <string name="create_attend_start_time_text">签到开始时间</string>
    <string name="create_attend_attend_type_text">签到类型</string>
    <string name="create_attend_self_attend">自助</string>
    <string name="create_attend_video_attend">视频</string>
    <string name="create_attend_confirm">确认</string>
    <string name="create_attend_end_time_text">签到结束时间</string>
    <string name="edit_attend_time_start_time_text">签到开始时间</string>
    <string name="edit_attend_time_end_time_text">签到结束时间</string>
    <string name="edit_attend_time_start_time_hint">签到开始时间</string>
    <string name="edit_attend_time_end_time_hint">签到结束时间</string>
    <string name="edit_attend_type_self_attend">自助签到</string>
    <string name="edit_attend_type_video_attend">视频签到</string>
    <string name="act_center_fb_create_act">创建活动</string>
    <string name="act_center_fb_join_act">加入活动</string>
    <string name="join_act_code_hint">活动代码(6位纯数字)</string>
    <string name="join_act_pwd_hint">活动密码(6位纯数字)</string>
    <string name="join_act">加入活动</string>
    <string name="act_manager_sys">活动管理系统</string>
    <string name="act_manager_sys_subtitle">基于人脸识别的活动管理系统</string>
    <string name="sticky_section_decoration_list_footer">没有更多活动了</string>
    <string name="sticky_section_decoration_section_top_tip">当前身份是活动创建者</string>
    <string name="sticky_section_decoration_section_bottom_tip"></string>
    <string name="about">关于</string>
    <string name="logout">退出登录</string>
    <string name="face_collect">人脸采集</string>
    <string name="setting">设置</string>
    <string name="more_setting">更多设置</string>
    <string name="act_desc">"简介: "</string>
    <string name="should_attend">应签到</string>
    <string name="have_attend">已签到</string>
    <string name="have_not_attend">未签到</string>
    <string name="create_attend">创建签到</string>
    <string name="good_afternoon">下午好</string>
    <string name="good_noon">中午好</string>
    <string name="good_morning">早上好</string>
    <string name="good_night">晚上好</string>
</resources>