<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:title="@string/setting">
        <menu>
            <item
                android:id="@+id/setting_face_collect"
                android:icon="@mipmap/icon_face"
                android:title="@string/face_collect" />
            <!--            app:actionLayout="@layout/bage_hint"-->

            <item
                android:id="@+id/setting_more_setting"
                android:icon="@mipmap/icon_setting"
                android:title="@string/more_setting" />

            <item
                android:id="@+id/setting_logout"
                android:icon="@mipmap/icon_logout"
                android:title="@string/logout" />
        </menu>
    </item>

    <item android:title="@string/about">
        <menu>
            <item
                android:id="@+id/github"
                android:icon="@drawable/icon_github"
                android:title="Github" />
        </menu>
    </item>
</menu>
