<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/al_find"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    android:paddingBottom="10dp">

    <TextView
        android:id="@+id/tv_start_time_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/create_attend_start_time_text"
        android:textColor="@color/black_text"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_start_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/tv_start_time_text"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@id/tv_start_time_text"
        android:background="@drawable/gray_bg_radius"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/create_attend_select_time_hint"
        android:inputType="textPersonName"
        android:padding="4dp" />

    <TextView
        android:id="@+id/tv_end_time_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_start_time_text"
        android:layout_marginTop="15dp"
        android:text="@string/create_attend_end_time_text"
        android:textColor="@color/black_text"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_end_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/tv_end_time_text"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@id/tv_end_time_text"
        android:background="@drawable/gray_bg_radius"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/create_attend_select_time_hint"
        android:inputType="textPersonName"
        android:padding="4dp" />

    <TextView
        android:id="@+id/tv_type_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_end_time_text"
        android:layout_marginTop="15dp"
        android:maxLength="10"
        android:text="@string/create_attend_attend_type_text"
        android:textColor="@color/black_text"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/ll_type"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/tv_type_text"
        android:layout_alignBottom="@id/tv_type_text"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@id/tv_type_text"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cb_self"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="2"
            android:text="@string/create_attend_self_attend"
            android:textColor="@android:color/black"
            android:theme="@style/MyCheckBox" />

        <CheckBox
            android:id="@+id/cb_video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="2"
            android:text="@string/create_attend_video_attend"
            android:textColor="@android:color/black"
            android:theme="@style/MyCheckBox" />

    </LinearLayout>

</RelativeLayout>