<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="20dp">

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/inner_with_outer_margin"
        android:gravity="center"
        android:hint="@string/act_detail_name_hint"
        android:textColor="@color/cookie_black"
        android:textSize="@dimen/act_detail_name_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="@dimen/act_detail_icon_width"
        android:layout_height="@dimen/act_detail_icon_height"
        android:layout_marginStart="0dp"
        android:src="@mipmap/icon_creator"
        app:layout_constraintBottom_toBottomOf="@id/tv_creator_text"
        app:layout_constraintStart_toStartOf="@id/tv_name"
        app:layout_constraintTop_toTopOf="@id/tv_creator_text" />

    <TextView
        android:id="@+id/tv_creator_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/act_detail_icon_text_margin"
        android:layout_marginTop="@dimen/act_detail_inter_margin"
        android:background="@drawable/bg_radius"
        android:text="@string/act_detail_creator_text"
        android:textColor="@color/cookie_black"
        android:textSize="@dimen/act_detail_text_text_size"
        app:layout_constraintStart_toStartOf="@id/tv_name"
        app:layout_constraintTop_toBottomOf="@id/tv_name" />

    <TextView
        android:id="@+id/tv_creator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="@dimen/list_item_interval"
        android:hint="@string/act_detail_creator_hint"
        android:textColor="@color/cookie_black_light"
        android:textSize="@dimen/act_detail_normal_text_size"
        app:layout_constraintStart_toStartOf="@id/tv_name"
        app:layout_constraintTop_toBottomOf="@id/tv_creator_text" />

    <ImageView
        android:layout_width="@dimen/act_detail_icon_width"
        android:layout_height="@dimen/act_detail_icon_height"
        android:layout_marginStart="0dp"
        android:src="@mipmap/icon_time"
        app:layout_constraintBottom_toBottomOf="@id/tv_start_time_text"
        app:layout_constraintStart_toStartOf="@id/tv_name"
        app:layout_constraintTop_toTopOf="@id/tv_start_time_text" />

    <TextView
        android:id="@+id/tv_start_time_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/act_detail_icon_text_margin"
        android:layout_marginTop="@dimen/act_detail_inter_margin"
        android:background="@drawable/bg_radius"
        android:text="@string/act_detail_act_start_time_text"
        android:textColor="@color/cookie_black"
        android:textSize="@dimen/act_detail_text_text_size"
        app:layout_constraintStart_toStartOf="@id/tv_name"
        app:layout_constraintTop_toBottomOf="@id/tv_creator" />

    <TextView
        android:id="@+id/tv_start_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/list_item_interval"
        android:background="@drawable/bg_radius_gray"
        android:hint="@string/act_detail_start_time_hint"
        android:padding="4dp"
        android:textAllCaps="false"
        android:textSize="@dimen/act_detail_normal_text_size"
        app:layout_constraintStart_toStartOf="@id/tv_name"
        app:layout_constraintTop_toBottomOf="@id/tv_start_time_text" />

    <ImageView
        android:layout_width="@dimen/act_detail_icon_width"
        android:layout_height="@dimen/act_detail_icon_height"
        android:layout_marginStart="0dp"
        android:src="@mipmap/icon_time"
        app:layout_constraintBottom_toBottomOf="@id/tv_end_time_text"
        app:layout_constraintStart_toStartOf="@id/tv_name"
        app:layout_constraintTop_toTopOf="@id/tv_end_time_text" />

    <TextView
        android:id="@+id/tv_end_time_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/act_detail_icon_text_margin"
        android:layout_marginTop="@dimen/act_detail_inter_margin"
        android:background="@drawable/bg_radius"
        android:text="@string/act_detail_end_time_text"
        android:textColor="@color/cookie_black"
        android:textSize="@dimen/act_detail_text_text_size"
        app:layout_constraintStart_toStartOf="@id/tv_name"
        app:layout_constraintTop_toBottomOf="@id/tv_start_time" />

    <TextView
        android:id="@+id/tv_end_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/list_item_interval"
        android:background="@drawable/bg_radius_gray"
        android:hint="@string/act_detail_end_time_hint"
        android:padding="4dp"
        android:textAllCaps="false"
        android:textSize="@dimen/act_detail_normal_text_size"
        app:layout_constraintStart_toStartOf="@id/tv_name"
        app:layout_constraintTop_toBottomOf="@id/tv_end_time_text" />

    <ImageView
        android:layout_width="@dimen/act_detail_icon_width"
        android:layout_height="@dimen/act_detail_icon_height"
        android:layout_marginStart="0dp"
        android:src="@mipmap/icon_location"
        app:layout_constraintBottom_toBottomOf="@+id/tv_loc_text"
        app:layout_constraintStart_toStartOf="@id/tv_name"
        app:layout_constraintTop_toTopOf="@+id/tv_loc_text" />

    <TextView
        android:id="@+id/tv_loc_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/act_detail_icon_text_margin"
        android:layout_marginTop="@dimen/act_detail_inter_margin"
        android:background="@drawable/bg_radius"
        android:text="@string/act_detail_loc_text"
        android:textColor="@color/cookie_black"
        android:textSize="@dimen/act_detail_text_text_size"
        app:layout_constraintStart_toStartOf="@id/tv_name"
        app:layout_constraintTop_toBottomOf="@id/tv_end_time" />

    <TextView
        android:id="@+id/tv_loc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/inner_with_outer_margin"
        android:layout_marginTop="@dimen/list_item_interval"
        android:layout_marginEnd="@dimen/inner_with_outer_margin"
        android:hint="@string/act_detail_loc_hint"
        android:textColor="@color/cookie_black_light"
        android:textSize="@dimen/act_detail_normal_text_size"
        android:theme="@style/NormalEditText"
        app:layout_constraintTop_toBottomOf="@id/tv_loc_text" />

    <ImageView
        android:layout_width="@dimen/act_detail_icon_width"
        android:layout_height="@dimen/act_detail_icon_height"
        android:layout_marginStart="0dp"
        android:src="@mipmap/icon_intro"
        app:layout_constraintBottom_toBottomOf="@+id/tv_intro_text"
        app:layout_constraintStart_toStartOf="@id/tv_name"
        app:layout_constraintTop_toTopOf="@+id/tv_intro_text" />

    <TextView
        android:id="@+id/tv_intro_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/act_detail_icon_text_margin"
        android:layout_marginTop="@dimen/act_detail_inter_margin"
        android:background="@drawable/bg_radius"
        android:text="@string/act_detail_intro_text"
        android:textColor="@color/cookie_black"
        android:textSize="@dimen/act_detail_text_text_size"
        app:layout_constraintStart_toStartOf="@id/tv_name"
        app:layout_constraintTop_toBottomOf="@id/tv_loc" />

    <TextView
        android:id="@+id/tv_intro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/inner_with_outer_margin"
        android:layout_marginTop="@dimen/list_item_interval"
        android:layout_marginEnd="@dimen/inner_with_outer_margin"
        android:hint="@string/act_detail_intro_hint"
        android:textColor="@color/cookie_black_light"
        android:textSize="@dimen/act_detail_desc_text_size"
        android:theme="@style/NormalEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_intro_text" />

</androidx.constraintlayout.widget.ConstraintLayout>