<?xml version="1.0" encoding="utf-8"?>
<com.qmuiteam.qmui.widget.QMUIWindowInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.qmuiteam.qmui.widget.QMUITopBarLayout
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true" />

    <ScrollView
        android:id="@+id/sv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/topbar_height">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="20dp">
            <!--输入框-->
            <GridLayout
                android:id="@+id/gl_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/qmui_config_color_white"
                android:columnCount="2"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:paddingStart="7dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">
                <!--账号-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/qmui_list_item_height"
                    android:layout_gravity="fill_horizontal"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/register_common_content_spacing"
                    android:paddingRight="@dimen/register_common_content_spacing"
                    android:text="@string/account"
                    android:textColor="?attr/qmui_config_color_gray_1"
                    android:textSize="?attr/qmui_common_list_item_title_h_text_size" />

                <EditText
                    android:id="@+id/et_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="fill"
                    android:layout_marginStart="@dimen/register_input_start_margin"
                    android:layout_marginEnd="@dimen/register_input_end_margin"
                    android:background="@drawable/qmui_divider_bottom_bitmap"
                    android:hint="@string/register_account_hint"
                    android:maxLength="20"
                    android:textColor="?attr/qmui_config_color_gray_5"
                    android:textSize="?attr/qmui_common_list_item_detail_h_text_size" />
                <!--密码-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/qmui_list_item_height"
                    android:layout_gravity="fill_horizontal"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/register_common_content_spacing"
                    android:paddingRight="@dimen/register_common_content_spacing"
                    android:text="@string/pwd"
                    android:textColor="?attr/qmui_config_color_gray_1"
                    android:textSize="?attr/qmui_common_list_item_title_h_text_size" />

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="fill"
                    android:layout_marginStart="@dimen/register_input_start_margin"
                    android:layout_marginEnd="@dimen/register_input_end_margin"
                    android:background="@drawable/qmui_divider_bottom_bitmap"
                    android:hint="@string/register_pwd_hint"
                    android:inputType="textPassword"
                    android:maxLength="20"
                    android:textColor="?attr/qmui_config_color_gray_5"
                    android:textSize="?attr/qmui_common_list_item_detail_h_text_size" />
                <!--重复密码-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/qmui_list_item_height"
                    android:layout_gravity="fill_horizontal"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/register_common_content_spacing"
                    android:paddingRight="@dimen/register_common_content_spacing"
                    android:text="@string/pwd_repeat"
                    android:textColor="?attr/qmui_config_color_gray_1"
                    android:textSize="?attr/qmui_common_list_item_title_h_text_size" />

                <EditText
                    android:id="@+id/et_password_repeat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="fill"
                    android:layout_marginStart="@dimen/register_input_start_margin"
                    android:layout_marginEnd="@dimen/register_input_end_margin"
                    android:background="@drawable/qmui_divider_bottom_bitmap"
                    android:hint="@string/pwd_repeat_hint"
                    android:inputType="textPassword"
                    android:maxLength="20"
                    android:textColor="?attr/qmui_config_color_gray_5"
                    android:textSize="?attr/qmui_common_list_item_detail_h_text_size" />
                <!--昵称-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/qmui_list_item_height"
                    android:layout_gravity="fill_horizontal"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/register_common_content_spacing"
                    android:paddingRight="@dimen/register_common_content_spacing"
                    android:text="@string/nickname"
                    android:textColor="?attr/qmui_config_color_gray_1"
                    android:textSize="?attr/qmui_common_list_item_title_h_text_size" />

                <EditText
                    android:id="@+id/et_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="fill"
                    android:layout_marginStart="@dimen/register_input_start_margin"
                    android:layout_marginEnd="@dimen/register_input_end_margin"
                    android:background="@drawable/qmui_divider_bottom_bitmap"
                    android:hint="@string/nickname_hint"
                    android:maxLength="10"
                    android:textColor="?attr/qmui_config_color_gray_5"
                    android:textSize="?attr/qmui_common_list_item_detail_h_text_size" />
                <!--联系方式-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/qmui_list_item_height"
                    android:layout_gravity="fill_horizontal"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/register_common_content_spacing"
                    android:paddingRight="@dimen/register_common_content_spacing"
                    android:text="@string/contact"
                    android:textColor="?attr/qmui_config_color_gray_1"
                    android:textSize="?attr/qmui_common_list_item_title_h_text_size" />

                <EditText
                    android:id="@+id/et_contact"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="fill"
                    android:layout_marginStart="@dimen/register_input_start_margin"
                    android:layout_marginEnd="@dimen/register_input_end_margin"
                    android:background="@drawable/qmui_divider_bottom_bitmap"
                    android:hint="@string/contact_hint"
                    android:maxLength="50"
                    android:textColor="?attr/qmui_config_color_gray_5"
                    android:textSize="?attr/qmui_common_list_item_detail_h_text_size" />
                <!--性别-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/qmui_list_item_height"
                    android:layout_gravity="fill_horizontal"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/register_common_content_spacing"
                    android:paddingRight="@dimen/register_common_content_spacing"
                    android:text="@string/sex"
                    android:textColor="?attr/qmui_config_color_gray_1"
                    android:textSize="?attr/qmui_common_list_item_title_h_text_size" />

                <LinearLayout
                    android:id="@+id/et_sex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="fill"
                    android:layout_marginStart="@dimen/register_input_start_margin"
                    android:layout_marginEnd="@dimen/register_input_end_margin"
                    android:background="@drawable/qmui_divider_bottom_bitmap"
                    android:maxLength="20"
                    android:orientation="horizontal"
                    android:textColor="?attr/qmui_config_color_gray_5"
                    android:textSize="?attr/qmui_common_list_item_detail_h_text_size">

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/rb_man"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:checked="true"
                            android:text="@string/male"
                            android:theme="@style/RegisterRadioButton" />

                        <RadioButton
                            android:id="@+id/rb_girl"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/female"
                            android:theme="@style/RegisterRadioButton" />
                    </RadioGroup>
                </LinearLayout>
                <!--个人简介-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/qmui_list_item_height"
                    android:layout_gravity="fill_horizontal"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/register_common_content_spacing"
                    android:paddingRight="@dimen/register_common_content_spacing"
                    android:text="@string/intro"
                    android:textColor="?attr/qmui_config_color_gray_1"
                    android:textSize="?attr/qmui_common_list_item_title_h_text_size" />

                <EditText
                    android:id="@+id/et_intro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="fill"
                    android:layout_marginStart="@dimen/register_input_start_margin"
                    android:layout_marginEnd="@dimen/register_input_end_margin"
                    android:background="@drawable/qmui_divider_bottom_bitmap"
                    android:hint="@string/intro_hint"
                    android:maxLength="510"
                    android:textColor="?attr/qmui_config_color_gray_5"
                    android:textSize="?attr/qmui_common_list_item_detail_h_text_size" />
            </GridLayout>
            <!--注册按钮位置-->
            <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
                android:id="@+id/bt_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:clickable="true"
                android:gravity="center"
                android:paddingStart="80dp"
                android:paddingTop="10dp"
                android:paddingEnd="80dp"
                android:paddingBottom="10dp"
                android:text="@string/confirm"
                android:textSize="?attr/qmui_common_list_item_title_h_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/gl_input"
                app:qmui_isRadiusAdjustBounds="true" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</com.qmuiteam.qmui.widget.QMUIWindowInsetLayout>